--- a/public/admin.html
+++ b/public/admin.html
@@ -204,13 +204,15 @@
       }
       .detail-card {
         width: 720px;
-        max-height: 80vh;
-        overflow: auto;
         background: #fff;
         border: 1px solid var(--border);
-        border-radius: 12px;
-        padding: 18px;
+        border-radius: 16px;
+        box-shadow: 0 10px 30px rgba(0,0,0,.12);
+        overflow: hidden;
       }
+      .detail-head { display:flex; justify-content:space-between; align-items:center; padding: 12px 18px; border-bottom:1px solid var(--border); }
+      .detail-body { padding: 12px 18px 18px 18px; max-height: 70vh; overflow: auto; }
+      .detail-actions { padding: 0 18px 18px 18px; display:flex; gap:10px; }
       .grid {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -228,6 +230,8 @@
         color: var(--muted);
         margin-bottom: 4px;
       }
+      .btn-danger { background:#ef4444; color:#fff; border-color:#ef4444; }
+      .btn-danger:hover { background:#dc2626; border-color:#dc2626; }
 
       /* Background from Uiverse.io by chase2k25 (renamed classes to avoid conflicts) */
       .bg-container {
@@ -398,21 +402,16 @@
     <!-- Detail modal -->
     <div id="detailModal" class="detail-modal">
       <div class="detail-card">
-        <div
-          style="
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 10px;
-          "
-        >
+        <div class="detail-head">
           <h3 style="margin: 0">Détails de la réservation</h3>
           <button id="detailClose" class="btn">Fermer</button>
         </div>
-        <div id="detailContent" class="grid"></div>
-        <div style="margin-top: 12px; display: flex; gap: 8px">
-          <button class="btn" disabled>Rembourser acompte</button>
-          <button class="btn" disabled>Rembourser solde</button>
+        <div class="detail-body">
+          <div id="detailContent" class="grid"></div>
+        </div>
+        <div class="detail-actions">
+          <button id="refundDepositBtn" class="btn btn-danger" disabled>Rembourser l'acompte</button>
+          <button id="refundBalanceBtn" class="btn" disabled>Rembourser le solde</button>
         </div>
       </div>
     </div>
@@ -541,20 +540,24 @@
           return
         }
         const d = j.data || {}
+        const labelMap = { timestamp:'Créé le', id:'Token', status:'Statut', name:'Nom', email:'Email', tel:'Téléphone', userMessage:'Message', nbAdults:'Adultes', nbChilds:'Enfants', nbNights:'Nuits', priceNights:'Total nuits (€)', priceClean:'Ménage (€)', priceTax:'Taxes (€)', priceTotal:'Total (€)', startDate:'Arrivée', endDate:'Départ', depositAt:"Acompte à", depositAmount:'Montant acompte (€)', depositPaymentIntentId:'PI Acompte', depositRefundedAmount:'Acompte remboursé (€)', depositRefundIds:'Refund IDs', address:'Adresse', postal:'Code postal', country:'Pays', city:'Ville', finalMessage:'Message final', childAge1:"Âge enfant 1", childAge2:"Âge enfant 2", childAge3:"Âge enfant 3", childAge4:"Âge enfant 4", childAge5:"Âge enfant 5", balanceDueAt:'Échéance solde', balanceAmount:'Montant solde (€)', balancePaymentIntentId:'PI Solde', balancePaidAt:'Solde payé à', balanceRefundedAmount:'Solde remboursé (€)', balanceRefundIds:'Refund IDs', cancelRequestedAt:'Annulation demandée à', cancelReason:'Motif annulation', cancelStatus:'Statut annulation', cancelledAt:'Annulation validée à', managerNotes:'Notes gestionnaire' }
+        const dateKeys = ['timestamp','startDate','endDate','depositAt','balanceDueAt','balancePaidAt','cancelRequestedAt','cancelledAt']
+        const ensureHours = (k, v) => { if(!v) return v; const dt = new Date(v); if(isNaN(dt)) return v; if (k==='startDate') dt.setHours(15,0,0,0); if (k==='endDate') dt.setHours(10,0,0,0); return dt }
+        if (d.startDate) d.startDate = ensureHours('startDate', d.startDate)
+        if (d.endDate) d.endDate = ensureHours('endDate', d.endDate)
+        const fmtDateTime = (v)=>{ const dt = new Date(v); if(isNaN(dt)) return v; const pad=n=>String(n).padStart(2,'0'); return `${pad(dt.getDate())}/${pad(dt.getMonth()+1)}/${dt.getFullYear()} ${pad(dt.getHours())}:${pad(dt.getMinutes())}` }
         const container = document.getElementById('detailContent')
-        const entries = Object.entries(d).filter(
-          ([k, v]) => v !== '' && v != null
-        )
-        container.innerHTML = entries
-          .map(
-            ([k, v]) => `
-          <div><label>${k}</label><div>${
-              Array.isArray(v) ? v.join(', ') : v
-            }</div></div>
-        `
-          )
-          .join('')
+        const entries = Object.entries(d).filter(([k,v])=> v!=='' && v!=null)
+        container.innerHTML = entries.map(([k,v])=>{ let val = Array.isArray(v)? v.join(', ') : v; if (dateKeys.includes(k)) val = fmtDateTime(v); const label = labelMap[k]||k; return `<div><label>${label}</label><div>${val}</div></div>` }).join('')
+        // Rendre visible et actions
         document.getElementById('detailModal').style.display = 'flex'
+        // Date limite remboursement acompte (J - 3 mois)
+        const btn = document.getElementById('refundDepositBtn')
+        if (d.startDate) {
+          const lim = new Date(d.startDate); lim.setMonth(lim.getMonth()-3);
+          const pad=n=>String(n).padStart(2,'0'); const limStr = `${pad(lim.getDate())}/${pad(lim.getMonth()+1)}/${lim.getFullYear()}`
+          btn.textContent = `Rembourser l'acompte (date limite: ${limStr})`
+        }
       }
 
       // Events
