--- a/public/admin.html
+++ b/public/admin.html
@@ -202,17 +202,35 @@
         justify-content: center;
         z-index: 10001;
       }
+      /* Loader global */
+      .loader-overlay { position: fixed; inset: 0; display: none; align-items: center; justify-content: center; z-index: 11000; background: rgba(0,0,0,.25); backdrop-filter: blur(3px); }
+      .loader { width: 64px; height: 64px; border: 4px solid rgba(255,255,255,.6); border-top-color: #5d3fd3; border-radius: 50%; animation: spin 0.8s linear infinite; box-shadow: 0 0 0 1px rgba(0,0,0,.05) inset; }
+      @keyframes spin { to { transform: rotate(360deg); } }
       .detail-card {
         width: 720px;
         background: #fff;
         border: 1px solid var(--border);
         border-radius: 16px;
-        box-shadow: 0 10px 30px rgba(0,0,0,.12);
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.12);
         overflow: hidden;
       }
-      .detail-head { display:flex; justify-content:space-between; align-items:center; padding: 12px 18px; border-bottom:1px solid var(--border); }
-      .detail-body { padding: 12px 18px 18px 18px; max-height: 70vh; overflow: auto; }
-      .detail-actions { padding: 0 18px 18px 18px; display:flex; gap:10px; }
+      .detail-head {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 12px 18px;
+        border-bottom: 1px solid var(--border);
+      }
+      .detail-body {
+        padding: 12px 18px 18px 18px;
+        max-height: 70vh;
+        overflow: auto;
+      }
+      .detail-actions {
+        padding: 0 18px 18px 18px;
+        display: flex;
+        gap: 10px;
+      }
       .grid {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -230,8 +248,15 @@
         color: var(--muted);
         margin-bottom: 4px;
       }
-      .btn-danger { background:#ef4444; color:#fff; border-color:#ef4444; }
-      .btn-danger:hover { background:#dc2626; border-color:#dc2626; }
+      .btn-danger {
+        background: #ef4444;
+        color: #fff;
+        border-color: #ef4444;
+      }
+      .btn-danger:hover {
+        background: #dc2626;
+        border-color: #dc2626;
+      }
 
       /* Background from Uiverse.io by chase2k25 (renamed classes to avoid conflicts) */
       .bg-container {
@@ -277,6 +302,7 @@
     </style>
   </head>
   <body>
+    <div id="loader" class="loader-overlay"><div class="loader"></div></div>
     <div class="bg-container">
       <div class="pattern-bg">
         <svg
@@ -410,8 +436,12 @@
           <div id="detailContent" class="grid"></div>
         </div>
         <div class="detail-actions">
-          <button id="refundDepositBtn" class="btn btn-danger" disabled>Rembourser l'acompte</button>
-          <button id="refundBalanceBtn" class="btn" disabled>Rembourser le solde</button>
+          <button id="refundDepositBtn" class="btn btn-danger" disabled>
+            Rembourser l'acompte
+          </button>
+          <button id="refundBalanceBtn" class="btn" disabled>
+            Rembourser le solde
+          </button>
         </div>
       </div>
     </div>
@@ -466,10 +496,12 @@
       }
 
       async function fetchRows(q = '') {
+        showLoader(true)
         const r = await fetch(API_LIST + `?q=${encodeURIComponent(q)}`, {
           headers: { 'x-admin-key': ADMIN_KEY }
         })
         const j = await r.json()
+        showLoader(false)
         if (j.status !== 'success') throw new Error(j.message || 'Erreur')
         return j.data || []
       }
@@ -530,32 +562,113 @@
       }
 
       async function openDetail(token) {
+        showLoader(true)
         const r = await fetch(
           API_DETAIL + `?token=${encodeURIComponent(token)}`,
           { headers: { 'x-admin-key': ADMIN_KEY } }
         )
         const j = await r.json()
+        showLoader(false)
         if (j.status !== 'success') {
           alert(j.message || 'Erreur')
           return
         }
         const d = j.data || {}
-        const labelMap = { timestamp:'Créé le', id:'Token', status:'Statut', name:'Nom', email:'Email', tel:'Téléphone', userMessage:'Message', nbAdults:'Adultes', nbChilds:'Enfants', nbNights:'Nuits', priceNights:'Total nuits (€)', priceClean:'Ménage (€)', priceTax:'Taxes (€)', priceTotal:'Total (€)', startDate:'Arrivée', endDate:'Départ', depositAt:"Acompte à", depositAmount:'Montant acompte (€)', depositPaymentIntentId:'PI Acompte', depositRefundedAmount:'Acompte remboursé (€)', depositRefundIds:'Refund IDs', address:'Adresse', postal:'Code postal', country:'Pays', city:'Ville', finalMessage:'Message final', childAge1:"Âge enfant 1", childAge2:"Âge enfant 2", childAge3:"Âge enfant 3", childAge4:"Âge enfant 4", childAge5:"Âge enfant 5", balanceDueAt:'Échéance solde', balanceAmount:'Montant solde (€)', balancePaymentIntentId:'PI Solde', balancePaidAt:'Solde payé à', balanceRefundedAmount:'Solde remboursé (€)', balanceRefundIds:'Refund IDs', cancelRequestedAt:'Annulation demandée à', cancelReason:'Motif annulation', cancelStatus:'Statut annulation', cancelledAt:'Annulation validée à', managerNotes:'Notes gestionnaire' }
-        const dateKeys = ['timestamp','startDate','endDate','depositAt','balanceDueAt','balancePaidAt','cancelRequestedAt','cancelledAt']
-        const ensureHours = (k, v) => { if(!v) return v; const dt = new Date(v); if(isNaN(dt)) return v; if (k==='startDate') dt.setHours(15,0,0,0); if (k==='endDate') dt.setHours(10,0,0,0); return dt }
+        const labelMap = {
+          timestamp: 'Créé le',
+          id: 'Token',
+          status: 'Statut',
+          name: 'Nom',
+          email: 'Email',
+          tel: 'Téléphone',
+          userMessage: 'Message',
+          nbAdults: 'Adultes',
+          nbChilds: 'Enfants',
+          nbNights: 'Nuits',
+          priceNights: 'Total nuits (€)',
+          priceClean: 'Ménage (€)',
+          priceTax: 'Taxes (€)',
+          priceTotal: 'Total (€)',
+          startDate: 'Arrivée',
+          endDate: 'Départ',
+          depositAt: 'Acompte à',
+          depositAmount: 'Montant acompte (€)',
+          depositPaymentIntentId: 'PI Acompte',
+          depositRefundedAmount: 'Acompte remboursé (€)',
+          depositRefundIds: 'Refund IDs',
+          address: 'Adresse',
+          postal: 'Code postal',
+          country: 'Pays',
+          city: 'Ville',
+          finalMessage: 'Message final',
+          childAge1: 'Âge enfant 1',
+          childAge2: 'Âge enfant 2',
+          childAge3: 'Âge enfant 3',
+          childAge4: 'Âge enfant 4',
+          childAge5: 'Âge enfant 5',
+          balanceDueAt: 'Échéance solde',
+          balanceAmount: 'Montant solde (€)',
+          balancePaymentIntentId: 'PI Solde',
+          balancePaidAt: 'Solde payé à',
+          balanceRefundedAmount: 'Solde remboursé (€)',
+          balanceRefundIds: 'Refund IDs',
+          cancelRequestedAt: 'Annulation demandée à',
+          cancelReason: 'Motif annulation',
+          cancelStatus: 'Statut annulation',
+          cancelledAt: 'Annulation validée à',
+          managerNotes: 'Notes gestionnaire'
+        }
+        const dateKeys = [
+          'timestamp',
+          'startDate',
+          'endDate',
+          'depositAt',
+          'balanceDueAt',
+          'balancePaidAt',
+          'cancelRequestedAt',
+          'cancelledAt'
+        ]
+        const ensureHours = (k, v) => {
+          if (!v) return v
+          const dt = new Date(v)
+          if (isNaN(dt)) return v
+          if (k === 'startDate') dt.setHours(15, 0, 0, 0)
+          if (k === 'endDate') dt.setHours(10, 0, 0, 0)
+          return dt
+        }
         if (d.startDate) d.startDate = ensureHours('startDate', d.startDate)
         if (d.endDate) d.endDate = ensureHours('endDate', d.endDate)
-        const fmtDateTime = (v)=>{ const dt = new Date(v); if(isNaN(dt)) return v; const pad=n=>String(n).padStart(2,'0'); return `${pad(dt.getDate())}/${pad(dt.getMonth()+1)}/${dt.getFullYear()} ${pad(dt.getHours())}:${pad(dt.getMinutes())}` }
+        const fmtDateTime = (v) => {
+          const dt = new Date(v)
+          if (isNaN(dt)) return v
+          const pad = (n) => String(n).padStart(2, '0')
+          return `${pad(dt.getDate())}/${pad(
+            dt.getMonth() + 1
+          )}/${dt.getFullYear()} ${pad(dt.getHours())}:${pad(dt.getMinutes())}`
+        }
         const container = document.getElementById('detailContent')
-        const entries = Object.entries(d).filter(([k,v])=> v!=='' && v!=null)
-        container.innerHTML = entries.map(([k,v])=>{ let val = Array.isArray(v)? v.join(', ') : v; if (dateKeys.includes(k)) val = fmtDateTime(v); const label = labelMap[k]||k; return `<div><label>${label}</label><div>${val}</div></div>` }).join('')
+        const entries = Object.entries(d).filter(
+          ([k, v]) => v !== '' && v != null
+        )
+        container.innerHTML = entries
+          .map(([k, v]) => {
+            let val = Array.isArray(v) ? v.join(', ') : v
+            if (dateKeys.includes(k)) val = fmtDateTime(v)
+            const label = labelMap[k] || k
+            return `<div><label>${label}</label><div>${val}</div></div>`
+          })
+          .join('')
         // Rendre visible et actions
         document.getElementById('detailModal').style.display = 'flex'
         // Date limite remboursement acompte (J - 3 mois)
         const btn = document.getElementById('refundDepositBtn')
         if (d.startDate) {
-          const lim = new Date(d.startDate); lim.setMonth(lim.getMonth()-3);
-          const pad=n=>String(n).padStart(2,'0'); const limStr = `${pad(lim.getDate())}/${pad(lim.getMonth()+1)}/${lim.getFullYear()}`
+          const lim = new Date(d.startDate)
+          lim.setMonth(lim.getMonth() - 3)
+          const pad = (n) => String(n).padStart(2, '0')
+          const limStr = `${pad(lim.getDate())}/${pad(
+            lim.getMonth() + 1
+          )}/${lim.getFullYear()}`
           btn.textContent = `Rembourser l'acompte (date limite: ${limStr})`
         }
       }
@@ -596,11 +709,14 @@
       })
       // Autologin via localStorage ou query ?key=
       ;(function () {
+        showLoader(true)
         const p = new URLSearchParams(location.search)
         const key = p.get('key') || localStorage.getItem('ADMIN_KEY') || ''
         if (key) {
           document.getElementById('adminKey').value = key
-          doLogin()
+          doLogin().finally(()=> showLoader(false))
+        } else {
+          showLoader(false)
         }
       })()
 
@@ -618,6 +734,7 @@
           ? 'contact.calypso.bay@gmail.com'
           : 'kevinblart@live.fr'
         try {
+          showLoader(true)
           const url = `${
             window.appConfig?.NEXT_PUBLIC_GAS_URL ||
             new URL(window.location.origin).origin
@@ -626,13 +743,21 @@
           )}&to=${encodeURIComponent(to)}&token=${encodeURIComponent(token)}`
           const r = await fetch(url)
           const j = await r.json()
+          showLoader(false)
           if (j.status !== 'success')
             throw new Error(j.message || 'Erreur envoi')
           alert('Email test envoyé (' + kind + ')')
         } catch (err) {
+          showLoader(false)
           alert(err.message)
         }
       })
+
+      function showLoader(on) {
+        const el = document.getElementById('loader')
+        el.style.display = on ? 'flex' : 'none'
+        document.body.style.filter = on ? 'blur(1px)' : 'none'
+      }
     </script>
   </body>
   <footer
