--- a/public/admin.html
+++ b/public/admin.html
@@ -203,9 +203,35 @@
         z-index: 10001;
       }
       /* Loader global */
-      .loader-overlay { position: fixed; inset: 0; display: none; align-items: center; justify-content: center; z-index: 11000; background: rgba(0,0,0,.25); backdrop-filter: blur(3px); }
-      .loader { width: 64px; height: 64px; border: 4px solid rgba(255,255,255,.6); border-top-color: #5d3fd3; border-radius: 50%; animation: spin 0.8s linear infinite; box-shadow: 0 0 0 1px rgba(0,0,0,.05) inset; }
-      @keyframes spin { to { transform: rotate(360deg); } }
+      .loader-overlay {
+        position: fixed;
+        inset: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 11000;
+        background: rgba(15, 23, 42, 0.08);
+        backdrop-filter: blur(2px);
+        -webkit-backdrop-filter: blur(2px);
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 220ms ease;
+      }
+      .loader-overlay.on { opacity: 1; pointer-events: all; }
+      .loader {
+        width: 64px;
+        height: 64px;
+        border: 4px solid rgba(255, 255, 255, 0.6);
+        border-top-color: #5d3fd3;
+        border-radius: 50%;
+        animation: spin 0.8s linear infinite;
+        box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05) inset;
+      }
+      @keyframes spin {
+        to {
+          transform: rotate(360deg);
+        }
+      }
       .detail-card {
         width: 720px;
         background: #fff;
@@ -714,7 +740,7 @@
         const key = p.get('key') || localStorage.getItem('ADMIN_KEY') || ''
         if (key) {
           document.getElementById('adminKey').value = key
-          doLogin().finally(()=> showLoader(false))
+          doLogin().finally(() => showLoader(false))
         } else {
           showLoader(false)
         }
@@ -755,8 +781,13 @@
 
       function showLoader(on) {
         const el = document.getElementById('loader')
-        el.style.display = on ? 'flex' : 'none'
-        document.body.style.filter = on ? 'blur(1px)' : 'none'
+        if (on) {
+          el.classList.add('on')
+          document.documentElement.style.overflow = 'hidden'
+        } else {
+          el.classList.remove('on')
+          document.documentElement.style.overflow = ''
+        }
       }
     </script>
   </body>
