--- a/public/admin.html
+++ b/public/admin.html
@@ -217,7 +217,10 @@
         pointer-events: none;
         transition: opacity 220ms ease;
       }
-      .loader-overlay.on { opacity: 1; pointer-events: all; }
+      .loader-overlay.on {
+        opacity: 1;
+        pointer-events: all;
+      }
       .loader {
         width: 64px;
         height: 64px;
