--- a/public/payer-solde.html
+++ b/public/payer-solde.html
@@ -116,8 +116,8 @@
               Payer le<br /><span class="themysion">Solde</span>
             </h2>
             <p>
-              Renseignez votre carte pour régler le solde restant de votre
-              réservation.
+              Pour finaliser votre réservation, veuillez régler le solde
+              restant.
             </p>
             <ul class="actions">
               <li>
