Annulation: ajout section Détails de la réservation entre les deux sections; récap + pastilles acompte/solde; contrôle éligibilité

--- a/public/annuler-reservation.html
+++ b/public/annuler-reservation.html
@@ -160,10 +160,80 @@
             return
           }
           const d = json.data
+          // Récapitulatif complet
+          const recapEl = document.getElementById('reservation-recap')
+          const total = Number(d.priceTotal || 0)
+          const deposit = Number(d.depositAmount || 0)
+          const balancePaid = d.status === 'balancePay'
+          const balanceAmount = Number(
+            d.balanceAmount || Math.max(0, total - deposit)
+          )
+          const fmtMoney = (v) =>
+            Number(v || 0).toLocaleString('fr-FR', {
+              minimumFractionDigits: 2,
+              maximumFractionDigits: 2
+            })
+          const s = new Date(d.startDate)
+          const e = new Date(d.endDate)
+          const fmtDate = (dt) =>
+            dt.toLocaleDateString('fr-FR', {
+              day: '2-digit',
+              month: 'long',
+              year: 'numeric'
+            })
+          const lines = []
+          lines.push(
+            `<div class="detail-item"><strong>Dates :</strong><span>${fmtDate(
+              s
+            )} au ${fmtDate(e)} (${d.nbNights} nuits)</span></div>`
+          )
+          lines.push(
+            `<div class="detail-item"><strong>Voyageurs :</strong><span>${
+              d.nbAdults
+            } adulte${d.nbAdults > 1 ? 's' : ''}${
+              d.nbChilds > 0
+                ? `, ${d.nbChilds} enfant${d.nbChilds > 1 ? 's' : ''}`
+                : ''
+            }</span></div>`
+          )
+          lines.push(
+            '<div class="detail-item" style="border-bottom:none; display:block; padding-bottom:0;">\
+            <div><strong>Détail du prix :</strong></div>\
+            <div style="padding-top:8px">• Total des nuits (' +
+              d.nbNights +
+              `) : ${fmtMoney(d.priceNights)} €</div>\
+            <div>• Frais de ménage : ${fmtMoney(d.priceClean)} €</div>\
+            <div>• Taxes (${d.nbAdults} adulte${
+                d.nbAdults > 1 ? 's' : ''
+              }) : ${fmtMoney(d.priceTax)} €</div>\
+            <div>• <strong>Total : ${fmtMoney(d.priceTotal)} €</strong></div>\
+          </div>`
+          )
+          recapEl.innerHTML =
+            lines.join('') +
+            `<div class="pills">
+             <span class="pill ${deposit > 0 ? 'green' : 'red'}">${
+              deposit > 0 ? '✔️' : '✖️'
+            } Acompte : ${fmtMoney(deposit)} €</span>
+             <span class="pill ${balancePaid ? 'green' : 'red'}">${
+              balancePaid ? '✔️' : '✖️'
+            } Solde : ${fmtMoney(balanceAmount)} €</span>
+           </div>`
+
           const start = new Date(d.startDate)
           const now = new Date()
           const diffDays = Math.ceil((start - now) / (1000 * 60 * 60 * 24))
           let msg = 'Vous pouvez annuler.'
+          const depositPaid =
+            deposit > 0 ||
+            d.status === 'depositPay' ||
+            d.status === 'balancePay'
+          if (!depositPaid) {
+            msg =
+              "Cette réservation n'est pas éligible à l'annulation (acompte non payé)."
+            policyBox.classList.add('error')
+            btn.disabled = true
+          }
           if (diffDays >= 90) {
             msg = "Annulation gratuite jusqu'à 3 mois avant le début du séjour."
           } else {
