--- a/public/annuler-reservation.html
+++ b/public/annuler-reservation.html
@@ -87,7 +87,9 @@
           <div class="content span-9-5">
             <h3 class="major">📅 Détails de la réservation</h3>
             <div class="form-section">
-              <div id="reservation-recap" class="recap-card">Chargement du récapitulatif…</div>
+              <div id="reservation-recap" class="recap-card">
+                Chargement du récapitulatif…
+              </div>
             </div>
           </div>
           <div class="image filtered tinted" data-position="center">
@@ -95,34 +97,19 @@
           </div>
         </section>
 
-        <section class="panel spotlight medium right" id="form">
-          <div class="content span-9-5">
-            <h3 class="major">🧾 Demande d’annulation</h3>
-            <div class="form-section">
-              <div class="warning" id="policy">
-                Chargement des informations…
-              </div>
-              <div style="margin-top: 16px">
-                <label for="reason" style="color: white; font-weight: 600"
-                  >Motif (optionnel)</label
-                >
-                <textarea
-                  id="reason"
-                  rows="4"
-                  placeholder="Expliquez brièvement la raison de votre demande (facultatif)"
-                ></textarea>
-              </div>
-              <button
-                id="cancel-btn"
-                class="btn-submit"
-                style="margin-top: 16px"
-              >
-                Demander l’annulation
-              </button>
-            </div>
+        <section class="panel color4-alt" id="form">
+          <div class="intro color4">
+            <h2 class="major">🧾 Demande d’annulation</h2>
+            <p id="policy">Chargement des informations…</p>
           </div>
-          <div class="image filtered tinted" data-position="center">
-            <img src="images/pic02.jpg" alt="" />
+          <div class="inner">
+            <div class="form-section">
+              <div>
+                <label for="reason" style="color: white; font-weight: 600">Motif (optionnel)</label>
+                <textarea id="reason" rows="4" placeholder="Expliquez brièvement la raison de votre demande (facultatif)"></textarea>
+              </div>
+              <button id="cancel-btn" class="btn-submit" style="margin-top: 16px">Demander l’annulation</button>
+            </div>
           </div>
         </section>
 
@@ -155,7 +142,7 @@
       const token = params.get('token')
       const policyBox = document.getElementById('policy')
       const btn = document.getElementById('cancel-btn')
-      
+
       // Styles minimaux pour la carte récap et pastilles
       const style = document.createElement('style')
       style.textContent = `
@@ -169,6 +156,21 @@
         .pill.red{ background:rgba(239,68,68,.18); border:1px solid rgba(239,68,68,.45); }
       `
       document.head.appendChild(style)
+
+      // Overlay de confirmation
+      const overlay = document.createElement('div')
+      overlay.className = 'confirm-overlay'
+      overlay.id = 'confirm-overlay'
+      overlay.innerHTML = `
+        <div class="confirm-box">
+          <h4>Confirmer l’annulation ?</h4>
+          <p style="margin:0;color:#374151">Êtes-vous sûr de vouloir envoyer une demande d’annulation pour cette réservation ?</p>
+          <div class="confirm-actions">
+            <button class="btn cancel" id="co-cancel">Annuler</button>
+            <button class="btn danger" id="co-confirm">Confirmer l’annulation</button>
+          </div>
+        </div>`
+      document.body.appendChild(overlay)
 
       async function load() {
         if (!token) {
@@ -268,6 +270,9 @@
               'Au-delà de 3 mois avant le début du séjour, l’acompte peut être retenu selon nos conditions.'
           }
           policyBox.textContent = msg
+          // Style léger sur le paragraphe politique
+          policyBox.style.color = '#fff'
+          policyBox.style.opacity = '0.95'
         } catch (e) {
           policyBox.textContent = 'Erreur de chargement'
         }
@@ -276,23 +281,32 @@
 
       btn.addEventListener('click', async () => {
         if (!token) return
-        btn.disabled = true
-        btn.textContent = 'Envoi…'
-        try {
-          const reason = document.getElementById('reason').value
-          const resp = await fetch('/api/requestCancellation', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ token, reason })
-          })
-          const json = await resp.json()
-          if (!resp.ok || json.status !== 'success')
-            throw new Error(json.error || json.message || 'Erreur')
-          btn.textContent = 'Demande envoyée ✔'
-        } catch (e) {
-          alert(e.message)
-          btn.disabled = false
-          btn.textContent = 'Demander l’annulation'
+        // Ouvrir l'overlay de confirmation
+        document.getElementById('confirm-overlay').style.display = 'flex'
+        const closeOverlay = () => {
+          document.getElementById('confirm-overlay').style.display = 'none'
+        }
+        document.getElementById('co-cancel').onclick = closeOverlay
+        document.getElementById('co-confirm').onclick = async () => {
+          closeOverlay()
+          btn.disabled = true
+          btn.textContent = 'Envoi…'
+          try {
+            const reason = document.getElementById('reason').value
+            const resp = await fetch('/api/requestCancellation', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({ token, reason })
+            })
+            const json = await resp.json()
+            if (!resp.ok || json.status !== 'success')
+              throw new Error(json.error || json.message || 'Erreur')
+            btn.textContent = 'Demande envoyée ✔'
+          } catch (e) {
+            alert(e.message)
+            btn.disabled = false
+            btn.textContent = 'Demander l’annulation'
+          }
         }
       })
     </script>
