--- a/public/payer-solde.html
+++ b/public/payer-solde.html
@@ -53,7 +53,10 @@
         padding: 16px;
         margin-top: 16px;
         color: white;
+        position: relative;
       }
+      .payment-lock{ position:absolute; inset:0; display:none; align-items:center; justify-content:center; backdrop-filter: blur(3px); background: rgba(17,24,39,.35); z-index: 5; }
+      .payment-lock .lock-box{ background: rgba(255,255,255,.95); color:#111827; padding:14px 18px; border-radius:12px; font-weight:700; box-shadow:0 10px 25px rgba(0,0,0,.25); }
       .payment-row {
         display: flex;
         justify-content: space-between;
@@ -166,6 +169,7 @@
           </div>
           <div class="inner">
             <div class="payment-card">
+              <div class="payment-lock" id="balance-lock"><div class="lock-box" id="balance-lock-text"></div></div>
               <h4 style="margin: 0 0 10px 0">Récapitulatif du paiement</h4>
               <div class="payment-row">
                 <span>Total</span><span id="total-amount">—</span>
@@ -376,6 +380,22 @@
             'fr-FR',
             { minimumFractionDigits: 2, maximumFractionDigits: 2 }
           )} €`
+
+          // Verrouillage selon statut
+          const st = String(d.status || '')
+          const lock = document.getElementById('balance-lock')
+          const lockText = document.getElementById('balance-lock-text')
+          if (lock && lockText) {
+            if (st === 'balancePay') {
+              lockText.textContent = 'Solde déjà réglé'
+              lock.style.display = 'flex'
+              btn.disabled = true
+            } else if (st === 'canceled') {
+              lockText.textContent = 'Réservation annulée'
+              lock.style.display = 'flex'
+              btn.disabled = true
+            }
+          }
         } catch (e) {
           detailsBox.textContent = 'Erreur de chargement'
         }
