--- a/public/annuler-reservation.html
+++ b/public/annuler-reservation.html
@@ -105,10 +105,22 @@
           <div class="inner">
             <div class="form-section">
               <div>
-                <label for="reason" style="color: white; font-weight: 600">Motif (optionnel)</label>
-                <textarea id="reason" rows="4" placeholder="Expliquez brièvement la raison de votre demande (facultatif)"></textarea>
+                <label for="reason" style="color: white; font-weight: 600"
+                  >Motif (optionnel)</label
+                >
+                <textarea
+                  id="reason"
+                  rows="4"
+                  placeholder="Expliquez brièvement la raison de votre demande (facultatif)"
+                ></textarea>
               </div>
-              <button id="cancel-btn" class="btn-submit" style="margin-top: 16px">Demander l’annulation</button>
+              <button
+                id="cancel-btn"
+                class="btn-submit"
+                style="margin-top: 16px"
+              >
+                Demander l’annulation
+              </button>
             </div>
           </div>
         </section>
