--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -116,8 +116,24 @@
         position: relative;
       }
       /* Overlay de verrouillage paiement */
-      .payment-lock{ position:absolute; inset:0; display:none; align-items:center; justify-content:center; backdrop-filter: blur(3px); background: rgba(17,24,39,.35); z-index: 5; }
-      .payment-lock .lock-box{ background: rgba(255,255,255,.95); color:#111827; padding:14px 18px; border-radius:12px; font-weight:700; box-shadow:0 10px 25px rgba(0,0,0,.25); }
+      .payment-lock {
+        position: absolute;
+        inset: 0;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        backdrop-filter: blur(3px);
+        background: rgba(17, 24, 39, 0.35);
+        z-index: 5;
+      }
+      .payment-lock .lock-box {
+        background: rgba(255, 255, 255, 0.95);
+        color: #111827;
+        padding: 14px 18px;
+        border-radius: 12px;
+        font-weight: 700;
+        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.25);
+      }
       .payment-section::before {
         content: '';
         position: absolute;
@@ -774,7 +790,9 @@
           </div>
           <div class="inner">
             <div class="payment-card">
-              <div class="payment-lock" id="payment-lock"><div class="lock-box" id="payment-lock-text"></div></div>
+              <div class="payment-lock" id="payment-lock">
+                <div class="lock-box" id="payment-lock-text"></div>
+              </div>
               <h3>Récapitulatif du paiement</h3>
               <div class="payment-breakdown">
                 <div class="payment-row">
