--- a/public/reservation-confirmee.html
+++ b/public/reservation-confirmee.html
@@ -1,118 +1,489 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Réservation Confirmée - Calypso Bay</title>
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/custom.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Réservation confirmée – Calypso Bay</title>
+    <!-- Polices -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Engagement&display=swap"
+      rel="stylesheet"
+    />
     <style>
-      .success-container {
-        min-height: 100vh;
+      /* Police signature */
+      @font-face {
+        font-family: 'Themysion';
+        src: local('Themysion'),
+          url('assets/fonts/Themysion.ttf') format('truetype');
+        font-display: swap;
+      }
+      :root {
+        /* Palette inspirée de tes écrans */
+        --brand-1: #14b8a6; /* teal */
+        --brand-2: #a3e635; /* lime */
+        --brand-3: #8b5cf6; /* violet doux accent facultatif */
+        --text: #0b1220;
+        --muted: #5b6475;
+        --card: rgba(255, 255, 255, 0.76);
+        --card-border: rgba(255, 255, 255, 0.6);
+        --ring: rgba(20, 184, 166, 0.35);
+        --success: #16a34a;
+        --hero-img: url('images/gallery/fulls/Jardin/13.jpg'); /* image locale */
+      }
+
+      * {
+        box-sizing: border-box;
+      }
+      html,
+      body {
+        height: 100%;
+      }
+      body {
+        margin: 0;
+        font-family: 'Source Sans Pro', system-ui, -apple-system, Segoe UI,
+          Roboto, Helvetica, Arial, 'Apple Color Emoji', 'Segoe UI Emoji';
+        color: var(--text);
+        background: radial-gradient(
+            1200px 800px at 10% -10%,
+            rgba(255, 255, 255, 0.83),
+            transparent 60%
+          ),
+          radial-gradient(
+            1300px 900px at 90% 110%,
+            rgba(255, 255, 255, 0.7),
+            transparent 60%
+          ),
+          linear-gradient(135deg, #f5f7fb 0%, #f1f0ff 100%);
+      }
+
+      .wrap {
+        min-height: 100%;
+        display: grid;
+        place-items: center;
+        padding: 32px;
+      }
+
+      /* Conteneur autour du panneau pour positionner le copyright hors cadre */
+      .stage {
+        position: relative;
+        width: min(1180px, 95vw);
+      }
+
+      .copyright {
+        position: absolute;
+        right: -10px;
+        bottom: -20px;
+        z-index: 5;
         display: flex;
-        align-items: center;
-        justify-content: center;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        padding: 20px;
+        align-items: baseline;
+        gap: 0.35em;
+        font: 600 12px 'Source Sans Pro', sans-serif;
+        color: rgba(11, 18, 32, 0.55);
+        background: rgba(255, 255, 255, 0.82);
+        border: 1px solid rgba(2, 6, 23, 0.1);
+        border-radius: 999px;
+        padding: 6px 10px;
+        box-shadow: 0 10px 24px rgba(2, 6, 23, 0.08);
+        backdrop-filter: blur(6px);
+        -webkit-backdrop-filter: blur(6px);
       }
-      .success-card {
-        background: white;
-        border-radius: 20px;
-        padding: 40px;
-        text-align: center;
-        max-width: 600px;
-        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+      .copyright .sig {
+        font-family: 'Engagement', 'Brush Script MT', cursive;
+        font-size: 2.2em;
+        line-height: 1;
+        margin-left: 0.25em;
+        text-decoration: none;
+        color: inherit;
+        font-weight: 400;
       }
-      .success-icon {
-        font-size: 80px;
-        color: #10b981;
-        margin-bottom: 20px;
+
+      @media (max-width: 600px) {
+        .copyright {
+          right: 0;
+          bottom: -14px;
+          padding: 6px 8px;
+        }
       }
-      .success-title {
-        font-size: 28px;
-        color: #1f2937;
-        margin-bottom: 15px;
+
+      /* Panneau large type sections du site */
+      .panel {
+        width: 100%;
+        border-radius: 28px;
+        overflow: hidden;
+        position: relative;
+        box-shadow: 0 22px 70px rgba(10, 17, 32, 0.18),
+          0 2px 10px rgba(2, 6, 23, 0.12);
+        isolation: isolate;
+      }
+      .panel::after {
+        /* léger grain pour rappeler tes sections */
+        content: '';
+        position: absolute;
+        inset: 0;
+        z-index: 1;
+        pointer-events: none;
+        background-image: repeating-radial-gradient(
+          rgba(0, 0, 0, 0.02) 0 1px,
+          transparent 1px 4px
+        );
+        mix-blend-mode: multiply;
+      }
+
+      .grid {
+        display: grid;
+        grid-template-columns: 1.05fr 0.95fr;
+      }
+      @media (max-width: 860px) {
+        .grid {
+          grid-template-columns: 1fr;
+        }
+      }
+
+      /* Colonne gauche (message) */
+      .left {
+        background: linear-gradient(
+          120deg,
+          color-mix(in oklab, var(--brand-1) 88%, #fff 12%),
+          color-mix(in oklab, var(--brand-2) 88%, #fff 12%)
+        );
+        padding: clamp(24px, 5vw, 48px);
+        position: relative;
+      }
+      .glass {
+        background: var(--card);
+        border: 1px solid var(--card-border);
+        backdrop-filter: blur(12px) saturate(1.15);
+        -webkit-backdrop-filter: blur(12px) saturate(1.15);
+        border-radius: 22px;
+        padding: clamp(18px, 3.8vw, 28px);
+        box-shadow: 0 18px 48px rgba(2, 6, 23, 0.12);
+      }
+
+      .brand {
+        display: flex;
+        align-items: baseline;
+        gap: 12px;
+        margin-bottom: 12px;
+      }
+      .brand b {
+        font: 700 clamp(16px, 2.2vw, 18px) / 1 'Source Sans Pro', sans-serif;
+        letter-spacing: 0.4px;
+        text-transform: uppercase;
+      }
+      .brand i {
+        font-family: 'Great Vibes', cursive;
+        font-size: clamp(32px, 6vw, 48px);
+        line-height: 1;
+      }
+
+      h1 {
+        font-family: 'Source Sans Pro', sans-serif;
+        font-weight: 700;
+        font-size: clamp(26px, 4vw, 34px);
+        line-height: 1.2;
+        margin: 10px 0 2px;
+      }
+      .lead {
+        color: #15202b;
+        opacity: 0.9;
+        margin: 0 0 18px;
+        font-size: clamp(15px, 2.2vw, 16px);
+        line-height: 1.6;
+      }
+
+      .divider {
+        height: 1px;
+        background: linear-gradient(
+          90deg,
+          rgba(255, 255, 255, 0.5),
+          rgba(0, 0, 0, 0.05),
+          rgba(255, 255, 255, 0.4)
+        );
+        margin: 12px 0 16px;
+      }
+
+      .badge {
+        width: 68px;
+        height: 68px;
+        border-radius: 50%;
+        display: grid;
+        place-items: center;
+        margin: 4px 0 14px;
+        background: radial-gradient(
+          circle at 30% 30%,
+          rgba(255, 255, 255, 0.9),
+          rgba(255, 255, 255, 0.7)
+        );
+        position: relative;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.9),
+          0 10px 25px rgba(22, 163, 74, 0.25);
+      }
+      .badge::after {
+        content: '';
+        position: absolute;
+        inset: -2px;
+        border-radius: 50%;
+        padding: 3px;
+        background: conic-gradient(
+          from 200deg,
+          var(--success),
+          color-mix(in oklab, var(--brand-1) 60%, #fff 40%),
+          var(--brand-2),
+          var(--success)
+        );
+        -webkit-mask: linear-gradient(#000 0 0) content-box,
+          linear-gradient(#000 0 0);
+        -webkit-mask-composite: xor;
+        mask-composite: exclude;
+        animation: spin 6s linear infinite;
+      }
+      @keyframes spin {
+        to {
+          transform: rotate(1turn);
+        }
+      }
+      .badge span {
+        font-size: 32px;
+        line-height: 1;
+        color: var(--success);
+      }
+
+      .status {
+        display: grid;
+        grid-template-columns: 40px 1fr;
+        gap: 12px;
+        padding: 14px 16px;
+        border-radius: 14px;
+        border: 1px solid rgba(22, 163, 74, 0.35);
+        background: linear-gradient(
+          0deg,
+          rgba(22, 163, 74, 0.08),
+          rgba(22, 163, 74, 0.06)
+        );
+      }
+      .status .icon {
+        width: 40px;
+        height: 40px;
+        border-radius: 12px;
+        display: grid;
+        place-items: center;
+        background: rgba(22, 163, 74, 0.16);
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.6);
+        color: var(--success);
         font-weight: 700;
       }
-      .success-message {
-        color: #6b7280;
-        line-height: 1.6;
-        margin-bottom: 30px;
-      }
-      .payment-details {
-        background: #f0fdf4;
-        padding: 20px;
-        border-radius: 10px;
-        margin: 20px 0;
-        border: 2px solid #10b981;
-      }
-      .payment-details h3 {
-        color: #10b981;
-        margin-bottom: 15px;
-      }
-      .btn-home {
-        display: inline-block;
-        background: #10b981;
-        color: white;
-        padding: 15px 30px;
-        border-radius: 10px;
-        text-decoration: none;
+      .status strong {
+        display: block;
         font-weight: 600;
-        transition: all 0.3s ease;
-        margin: 10px;
       }
-      .btn-home:hover {
-        background: #059669;
-        transform: translateY(-2px);
+      .status small {
+        display: block;
+        color: color-mix(in oklab, var(--muted) 85%, #000 15%);
       }
-      .btn-contact {
-        display: inline-block;
-        background: #6366f1;
-        color: white;
-        padding: 15px 30px;
-        border-radius: 10px;
-        text-decoration: none;
+
+      .muted {
+        color: var(--text);
+        opacity: 0.7;
+        margin: 10px 0 22px;
+      }
+
+      .actions {
+        display: flex;
+        gap: 12px;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+      }
+      .btn {
+        --h: 46px;
+        height: var(--h);
+        padding: 0 18px;
+        border-radius: 14px;
+        border: 1px solid transparent;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
         font-weight: 600;
-        transition: all 0.3s ease;
-        margin: 10px;
+        text-decoration: none;
+        cursor: pointer;
+        transition: transform 0.06s ease, box-shadow 0.2s ease,
+          background 0.2s ease, color 0.2s ease, border-color 0.2s ease;
+        box-shadow: 0 8px 20px rgba(2, 6, 23, 0.08);
       }
-      .btn-contact:hover {
-        background: #4f46e5;
-        transform: translateY(-2px);
+      .btn:active {
+        transform: translateY(1px);
+      }
+      .btn.primary {
+        background: linear-gradient(
+          180deg,
+          color-mix(in oklab, var(--brand-1) 86%, #fff 14%),
+          color-mix(in oklab, var(--brand-2) 86%, #000 14%)
+        );
+        color: #fff;
+        border-color: color-mix(
+          in oklab,
+          var(--brand-1) 40%,
+          var(--brand-2) 60%
+        );
+      }
+      .btn.primary:hover {
+        box-shadow: 0 14px 28px rgba(20, 184, 166, 0.28);
+      }
+      .btn.ghost {
+        background: rgba(255, 255, 255, 0.82);
+        color: #0b1220;
+        border-color: rgba(2, 6, 23, 0.1);
+      }
+      .btn.ghost:hover {
+        border-color: var(--ring);
+        box-shadow: 0 10px 26px rgba(2, 6, 23, 0.12);
+      }
+
+      /* Colonne droite (photo) */
+      .right {
+        position: relative;
+        min-height: 360px;
+        background: var(--brand-3);
+      }
+      .hero {
+        position: absolute;
+        inset: 0;
+        background-image: var(
+          --hero-img,
+          url('images/gallery/fulls/Jardin/13.jpg')
+        );
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
+      .hero::after {
+        /* voile lisible */
+        content: '';
+        position: absolute;
+        inset: 0;
+        background: linear-gradient(
+          90deg,
+          rgba(10, 22, 43, 0.55) 0%,
+          rgba(10, 22, 43, 0.15) 55%,
+          rgba(10, 22, 43, 0.05) 100%
+        );
+      }
+      .hero-caption {
+        position: absolute;
+        z-index: 2;
+        left: clamp(18px, 4vw, 28px);
+        bottom: clamp(18px, 4vw, 28px);
+        color: #fff;
+        max-width: 85%;
+      }
+      .hero-caption .hero-brand {
+        font-family: 'Themysion', 'Great Vibes', cursive;
+        font-size: clamp(40px, 8vw, 76px);
+        line-height: 1;
+        letter-spacing: 0.5px;
+        text-shadow: 0 8px 30px rgba(0, 0, 0, 0.28);
+        margin: 0 0 6px;
+        opacity: 0.98;
+      }
+      .hero-caption h2 {
+        font: 700 clamp(18px, 3.2vw, 24px) / 1.25 'Source Sans Pro', sans-serif;
+        margin: 0 0 6px;
+      }
+      .hero-caption p {
+        margin: 0;
+        opacity: 0.9;
+        font-size: clamp(13px, 2.2vw, 14px);
+      }
+
+      /* Mobile : pile l'image au-dessus */
+      @media (max-width: 860px) {
+        .right {
+          min-height: 240px;
+        }
       }
     </style>
   </head>
   <body>
-    <div class="success-container">
-      <div class="success-card">
-        <div class="success-icon">🎉</div>
-        <h1 class="success-title">Réservation Confirmée !</h1>
-        <p class="success-message">
-          Félicitations ! Votre réservation est maintenant définitive.<br />
-          Votre acompte de 10% a été reçu avec succès.
-        </p>
+    <main class="wrap">
+      <div class="stage">
+        <section class="panel">
+          <div class="grid">
+            <!-- Colonne message -->
+            <div class="left">
+              <div class="glass" role="status" aria-live="polite">
+                <div class="badge" aria-hidden="true"><span>✓</span></div>
+                <h1>Réservation confirmée&nbsp;!</h1>
+                <div class="divider"></div>
+                <p class="lead">
+                  Félicitations&nbsp;! Votre réservation est désormais
+                  <strong>définitive</strong>. Votre acompte de 10&nbsp;% a été
+                  reçu avec succès.
+                </p>
 
-        <div class="payment-details">
-          <h3>✅ Paiement validé</h3>
-          <p>Votre acompte a été prélevé avec succès.</p>
-          <p>
-            Vous allez recevoir un email de confirmation avec tous les détails.
-          </p>
-        </div>
+                <div class="status" aria-label="Statut du paiement">
+                  <div class="icon" aria-hidden="true">✓</div>
+                  <div>
+                    <strong>Paiement de votre acompte validé</strong>
+                    <small
+                      >Un e‑mail de confirmation vous a été envoyé. Vous y
+                      trouverez un lien pour payer le solde restant ainsi qu'un
+                      autre pour annuler votre réservation.</small
+                    >
+                  </div>
+                </div>
 
-        <p class="success-message">
-          Notre équipe vous contactera prochainement pour organiser votre
-          séjour.<br />
-          Merci de votre confiance !
-        </p>
+                <p class="muted">
+                  Besoin d’aide, d'un renseignement ou d’une demande
+                  particulière (arrivées tardives, options, ...) ?
+                  Contactez‑nous — nous nous efforcerons de vous satisfaire.
+                </p>
 
-        <div>
-          <a href="/" class="btn-home">Retour à l'accueil</a>
-          <a href="mailto:contact.calypso.bay@gmail.com" class="btn-contact"
-            >Nous contacter</a
+                <div class="actions">
+                  <a class="btn primary" href="index.html"
+                    ><i class="fa-solid fa-house" aria-hidden="true"></i
+                    ><span>Retour à l’accueil</span></a
+                  >
+                  <a class="btn ghost" href="mailto:contact@calypso-bay.com"
+                    ><i class="fa-solid fa-envelope" aria-hidden="true"></i
+                    ><span>Nous contacter</span></a
+                  >
+                </div>
+              </div>
+            </div>
+
+            <!-- Colonne photo -->
+            <aside class="right" aria-hidden="true">
+              <div class="hero"></div>
+              <div class="hero-caption">
+                <div class="hero-brand">Calypso Bay</div>
+                <h2>Votre séjour vous attend</h2>
+                <p>Vue mer, piscine à débordement & atmosphère tropicale.</p>
+              </div>
+            </aside>
+          </div>
+        </section>
+        <div class="copyright">
+          <span>&copy; Calypso Bay | By</span>
+          <a
+            href="https://moriarty-design.fr"
+            target="_blank"
+            rel="noopener"
+            class="sig"
+            >Moriarty</a
           >
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
